# feels-like-github-status

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: deploy.yml  update-data.yml
docs/superpowers/plans/: 2026-05-08-feels-like-github-status.md
docs/superpowers/specs/: 2026-05-08-feels-like-github-status-design.md
parsed/: downtime_windows.csv  incidents.jsonl  segments.csv
pipeline/: LICENSE  UPSTREAM.md  extract_incidents.py  github-status-history.atom  merge_incidents.py  run_gliner_experiment.py
pipeline/tests/: test_extract_incidents.py
site/: app.js  index.html  styles.css
site/components/: service-list.js  services-filter.js  time-grid.js  uptime-card.js
site/lib/: data.js  data.test.js  feels.js  feels.test.js  mask.js  mask.test.js  services.js  services.test.js  tz.js  tz.test.js  url-state.js  url-state.test.js
site/lib/__fixtures__/: downtime_windows.csv  incidents.jsonl
