[project]
name = "feels-like-github-status"
version = "0.1.0"
description = "GitHub status, filtered to your hours."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "gliner2>=1.2.3",
    "torch==2.9.1+cpu ; sys_platform == 'linux'",
    "torch==2.9.1 ; sys_platform != 'linux'",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
